QA fixes: spacing, sizing and missing content

--- a/assets/sass/pages/_home.scss
+++ b/assets/sass/pages/_home.scss
@@ -29,18 +29,19 @@
 			top: 0;
 			padding: 60px 30px;
 			img {
-				width: 80%;
+				width: 100%;
 				height: auto;
 				margin-bottom: 30px;
-				@include breakpoint(sm) {
-					width: 100%;		
-				}
 			}
 		}
 	}
 }
 
 #home-we-do {
+	padding-bottom: 4em;
+	@include breakpoint(sm) {
+		padding-bottom: 8em;
+	}
 	h4 {
 		padding-bottom: 30px;
 		border-bottom: 1px solid $black_sub3;
@@ -67,8 +68,12 @@
 		}
 	}
 	.sub {
-		margin-top: 150px;
-		margin-bottom: 150px;
+		margin-top: 75px;
+		margin-bottom: 75px;
+		@include breakpoint(sm) {
+			margin-top: 150px;
+			margin-bottom: 150px;
+		}
 	}
 
 	svg {
@@ -77,8 +82,14 @@
 }
 
 #home-our-work {
+	padding-top: 4em;
+	padding-bottom: 4em;
 	background-color: $black;
 	color: $white;
+	@include breakpoint(sm) {
+		padding-top: 8em;
+		padding-bottom: 8em;
+	}
 	.casestudy {
 		margin: 80px 0;
 		background-color: $white;
@@ -88,8 +99,15 @@
 			padding: 125px 60px;
 		}
 	}
+
 }
 
 #home-we-write {
+	padding-top: 4em;
+	padding-bottom: 4em;
 	border-bottom: 1px solid $black_sub3;
+	@include breakpoint(sm) {
+		padding-top: 8em;
+		padding-bottom: 8em;
+	}
 }
