--- a/assets/sass/partials/_header.scss
+++ b/assets/sass/partials/_header.scss
@@ -205,7 +205,7 @@
         }
         li {
            
-            border-bottom: 1px solid $black_sub1;
+            border-bottom: 1px solid rgba(255, 255, 255, 0.2);
             a {
                 padding:  20px;
                 display: flex;
