--- a/assets/sass/partials/site/_casestudy.scss
+++ b/assets/sass/partials/site/_casestudy.scss
@@ -12,7 +12,7 @@
 		}
 	}
 	.quote {
-		padding: 50px 0;
+		padding: 25px 0;
 		@include breakpoint(sm) {
 			align-self: center;
 			padding: 0 30px;	
